// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree if description is set 1`] = `
{
  "autocomplete": "list",
  "description": "Some description",
  "haspopup": "listbox",
  "name": "",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree if option is highlighted 1`] = `
{
  "autocomplete": "list",
  "children": [
    {
      "name": "",
      "role": "generic",
    },
  ],
  "expanded": true,
  "focused": true,
  "haspopup": "listbox",
  "name": "",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree if option is highlighted 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "name": "",
                          "role": "LabelText",
                        },
                        {
                          "children": [
                            {
                              "autocomplete": "list",
                              "children": [
                                {
                                  "name": "",
                                  "role": "generic",
                                },
                              ],
                              "expanded": true,
                              "focused": true,
                              "haspopup": "listbox",
                              "name": "",
                              "role": "combobox",
                            },
                            {
                              "children": [
                                {
                                  "role": "none",
                                },
                              ],
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [
                                                        {
                                                          "children": [
                                                            {
                                                              "name": "Option A",
                                                              "role": "StaticText",
                                                            },
                                                          ],
                                                          "role": "none",
                                                        },
                                                      ],
                                                      "role": "none",
                                                    },
                                                  ],
                                                  "name": "",
                                                  "role": "generic",
                                                },
                                                {
                                                  "children": [
                                                    {
                                                      "name": "Option A",
                                                      "role": "option",
                                                    },
                                                  ],
                                                  "role": "none",
                                                },
                                              ],
                                              "name": "",
                                              "role": "LabelText",
                                            },
                                          ],
                                          "role": "none",
                                        },
                                      ],
                                      "role": "none",
                                    },
                                  ],
                                  "name": "",
                                  "role": "generic",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [
                                                        {
                                                          "children": [
                                                            {
                                                              "name": "Option B",
                                                              "role": "StaticText",
                                                            },
                                                          ],
                                                          "role": "none",
                                                        },
                                                      ],
                                                      "role": "none",
                                                    },
                                                  ],
                                                  "name": "",
                                                  "role": "generic",
                                                },
                                                {
                                                  "children": [
                                                    {
                                                      "name": "Option B",
                                                      "role": "option",
                                                    },
                                                  ],
                                                  "role": "none",
                                                },
                                              ],
                                              "name": "",
                                              "role": "LabelText",
                                            },
                                          ],
                                          "role": "none",
                                        },
                                      ],
                                      "role": "none",
                                    },
                                  ],
                                  "name": "",
                                  "role": "generic",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [
                                                        {
                                                          "children": [
                                                            {
                                                              "name": "Option C",
                                                              "role": "StaticText",
                                                            },
                                                          ],
                                                          "role": "none",
                                                        },
                                                      ],
                                                      "role": "none",
                                                    },
                                                  ],
                                                  "name": "",
                                                  "role": "generic",
                                                },
                                                {
                                                  "children": [
                                                    {
                                                      "name": "Option C",
                                                      "role": "option",
                                                    },
                                                  ],
                                                  "role": "none",
                                                },
                                              ],
                                              "name": "",
                                              "role": "LabelText",
                                            },
                                          ],
                                          "role": "none",
                                        },
                                      ],
                                      "role": "none",
                                    },
                                  ],
                                  "name": "",
                                  "role": "generic",
                                },
                              ],
                              "role": "none",
                            },
                          ],
                          "multiselectable": true,
                          "name": "",
                          "orientation": "vertical",
                          "role": "listbox",
                        },
                      ],
                      "name": "",
                      "role": "generic",
                    },
                    {
                      "children": [
                        {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                    {
                      "children": [
                        {
                          "name": "Option A not selected (1 of 3)",
                          "role": "StaticText",
                        },
                      ],
                      "name": "",
                      "role": "status",
                    },
                  ],
                  "name": "",
                  "role": "generic",
                },
              ],
              "name": "",
              "role": "Section",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "RootWebArea",
}
`;

exports[`accessibility should expose correct accessibility tree if option is selected 1`] = `
{
  "autocomplete": "list",
  "children": [
    {
      "role": "none",
    },
    {
      "name": "",
      "role": "generic",
    },
  ],
  "description": "1 options selected",
  "expanded": true,
  "focused": true,
  "haspopup": "listbox",
  "name": "Option A",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree if option is selected 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "name": "1 options selected",
                                  "role": "StaticText",
                                },
                              ],
                              "role": "none",
                            },
                          ],
                          "name": "",
                          "role": "LabelText",
                        },
                        {
                          "children": [
                            {
                              "autocomplete": "list",
                              "children": [
                                {
                                  "role": "none",
                                },
                                {
                                  "name": "",
                                  "role": "generic",
                                },
                              ],
                              "description": "1 options selected",
                              "expanded": true,
                              "focused": true,
                              "haspopup": "listbox",
                              "name": "Option A",
                              "role": "combobox",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "role": "none",
                                        },
                                      ],
                                      "role": "none",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "name": "Reset selection",
                                              "role": "StaticText",
                                            },
                                          ],
                                          "role": "none",
                                        },
                                      ],
                                      "role": "none",
                                    },
                                  ],
                                  "name": "Reset selection",
                                  "role": "button",
                                },
                              ],
                              "name": "",
                              "role": "generic",
                            },
                            {
                              "children": [
                                {
                                  "role": "none",
                                },
                              ],
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [
                                                        {
                                                          "children": [
                                                            {
                                                              "name": "Option A",
                                                              "role": "StaticText",
                                                            },
                                                          ],
                                                          "role": "none",
                                                        },
                                                      ],
                                                      "role": "none",
                                                    },
                                                  ],
                                                  "name": "",
                                                  "role": "generic",
                                                },
                                                {
                                                  "children": [
                                                    {
                                                      "name": "Option A",
                                                      "role": "option",
                                                      "selected": true,
                                                    },
                                                  ],
                                                  "role": "none",
                                                },
                                              ],
                                              "name": "",
                                              "role": "LabelText",
                                            },
                                          ],
                                          "role": "none",
                                        },
                                      ],
                                      "role": "none",
                                    },
                                  ],
                                  "name": "",
                                  "role": "generic",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [
                                                        {
                                                          "children": [
                                                            {
                                                              "name": "Option B",
                                                              "role": "StaticText",
                                                            },
                                                          ],
                                                          "role": "none",
                                                        },
                                                      ],
                                                      "role": "none",
                                                    },
                                                  ],
                                                  "name": "",
                                                  "role": "generic",
                                                },
                                                {
                                                  "children": [
                                                    {
                                                      "name": "Option B",
                                                      "role": "option",
                                                    },
                                                  ],
                                                  "role": "none",
                                                },
                                              ],
                                              "name": "",
                                              "role": "LabelText",
                                            },
                                          ],
                                          "role": "none",
                                        },
                                      ],
                                      "role": "none",
                                    },
                                  ],
                                  "name": "",
                                  "role": "generic",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [
                                                        {
                                                          "children": [
                                                            {
                                                              "name": "Option C",
                                                              "role": "StaticText",
                                                            },
                                                          ],
                                                          "role": "none",
                                                        },
                                                      ],
                                                      "role": "none",
                                                    },
                                                  ],
                                                  "name": "",
                                                  "role": "generic",
                                                },
                                                {
                                                  "children": [
                                                    {
                                                      "name": "Option C",
                                                      "role": "option",
                                                    },
                                                  ],
                                                  "role": "none",
                                                },
                                              ],
                                              "name": "",
                                              "role": "LabelText",
                                            },
                                          ],
                                          "role": "none",
                                        },
                                      ],
                                      "role": "none",
                                    },
                                  ],
                                  "name": "",
                                  "role": "generic",
                                },
                              ],
                              "role": "none",
                            },
                          ],
                          "multiselectable": true,
                          "name": "",
                          "orientation": "vertical",
                          "role": "listbox",
                        },
                      ],
                      "name": "",
                      "role": "generic",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "role": "none",
                                },
                              ],
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                    {
                      "children": [
                        {
                          "name": "Option A, selected (1 of 3)",
                          "role": "StaticText",
                        },
                      ],
                      "name": "",
                      "role": "status",
                    },
                  ],
                  "name": "",
                  "role": "generic",
                },
              ],
              "name": "",
              "role": "Section",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "RootWebArea",
}
`;

exports[`accessibility should expose correct accessibility tree in error state 1`] = `
{
  "autocomplete": "list",
  "description": "Some error message",
  "haspopup": "listbox",
  "invalid": "true",
  "name": "",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree of option list if filter value has no match 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "role": "none",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "name": "No results found",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "name": "",
      "role": "status",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "role": "none",
                                    },
                                  ],
                                  "role": "none",
                                },
                              ],
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                        {
                          "children": [
                            {
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "role": "none",
                                    },
                                  ],
                                  "role": "none",
                                },
                              ],
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                        {
                          "children": [
                            {
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "role": "none",
                                    },
                                  ],
                                  "role": "none",
                                },
                              ],
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                        {
                          "children": [
                            {
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "multiselectable": true,
  "name": "",
  "orientation": "vertical",
  "role": "listbox",
}
`;

exports[`accessibility should expose correct initial accessibility tree and aria properties of filter 1`] = `
{
  "autocomplete": "list",
  "children": [
    {
      "name": "",
      "role": "generic",
    },
  ],
  "haspopup": "listbox",
  "name": "",
  "role": "combobox",
}
`;
